--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header Navegación -->
     <header id="header">
         <nav>
             <div class="logo">
@@ -28,7 +27,6 @@
         </nav>
     </header>
 
-    <!-- Banner Principal -->
     <section id="banner" style="background-image: url('/img/portada.jpg'); background-size: cover; background-position: center;">
         <div class="banner-content">
             <h2>Explora el Arte Moderno</h2>
@@ -40,41 +38,39 @@
         </div>
     </section>
 
-    <!-- Sección 2: Galería de Imágenes -->
     <section id="galeria">
         <h2>Colecciones Destacadas</h2>
         <div class="image-gallery">
-            <!-- Agregamos imágenes a la galería -->
             <div class="coleccion">
-                <img src="/img/abstract1.jpg" alt="Obra 1" onclick="openLightbox();toSlide(1)">
+                <img src="/img/abstract1.jpg" alt="Obra 1">
                 <div class="overlay">
                     <h3>Sinfonía de Colores</h3>
                     <p>Una explosión de tonos vivos que se fusionan en una danza caótica pero armoniosa. Esta obra captura la energía y la emoción a través de una paleta audaz y pinceladas dinámicas</p>
                 </div>
             </div>
             <div class="coleccion">
-                <img src="/img/abstract2.jpg" alt="Obra 2" onclick="openLightbox();toSlide(2)">
+                <img src="/img/abstract2.jpg" alt="Obra 2">
                 <div class="overlay">
                     <h3>Ecos del Vacio</h3>
                     <p>Una composición vibrante que explora la relación entre color y forma. Las formas geométricas se entrelazan en un juego de contrastes y sutilezas, evocando una sensación de profundidad y misterio.</p>
                 </div>
             </div>
             <div class="coleccion">
-                <img src="/img/abstract3.jpg" alt="Obra 3" onclick="openLightbox();toSlide(3)">
+                <img src="/img/abstract3.jpg" alt="Obra 3">
                 <div class="overlay">
                     <h3>Rostros Fragmentados</h3>
                     <p>Una serie de formas y colores entrelazados que desafían la percepción de la realidad. La pieza invita al espectador a descifrar las expresiones ocultas en un torbellino de líneas y sombras</p>
                 </div>
             </div>
             <div class="coleccion">
-                <img src="/img/surreal1.jpg" alt="Obra 6">
+                <img src="/img/surreal1.jpg" alt="Obra 4">
                 <div class="overlay">
                     <h3>Sueños de Silencio</h3>
                     <p>Un paisaje onírico donde la realidad y la fantasía se funden en una armonía inquietante. Los elementos flotantes y las perspectivas distorsionadas crean una atmósfera de asombro y desasosiego.</p>
                 </div>
             </div>
             <div class="coleccion">
-                <img src="/img/surreal2.jpg" alt="Obra 6">
+                <img src="/img/surreal2.jpg" alt="Obra 5">
                 <div class="overlay">
                     <h3>Máscaras de la Realidad</h3>
                     <p>Una pieza que presenta figuras humanas con características surrealistas, como rostros con ojos de relojes o cuerpos entrelazados con objetos inanimados. La obra examina la delgada línea entre lo real y lo imaginario.</p>
@@ -95,14 +91,14 @@
                 </div>
             </div>
             <div class="coleccion">
-                <img src="/img/vanguard3.jpg" alt="Obra 7">
+                <img src="/img/vanguard3.jpg" alt="Obra 8">
                 <div class="overlay">
                     <h3>Ruptura del Espacio</h3>
                     <p>Una exploración de la geometría y la estructura moderna, utilizando materiales y técnicas innovadoras para desafiar la percepción del espacio y la forma. La pieza presenta una interacción dinámica entre elementos sólidos y vacíos.</p>
                 </div>
             </div>
             <div class="coleccion">
-                <img src="/img/vanguard2.jpg" alt="Obra 8">
+                <img src="/img/vanguard2.jpg" alt="Obra 9">
                 <div class="overlay">
                     <h3>Códigos de la Era Digital</h3>
                     <p>Una obra que fusiona arte y tecnología, integrando patrones digitales y elementos de codificación en una composición visualmente estimulante. La pieza refleja la influencia de la tecnología en el arte contemporáneo.</p>
@@ -152,7 +148,6 @@
                     </div>
                 </div>
     </section>
-    <!-- Footer -->
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
