BANNER INTERACTION FIX

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>Galería de D'ante</h1>
             </div>
             <ul class="menu">
-                <li><a href="#inicio"><i class="fas fa-home"></i> Inicio</a></li>
+                <li><a href="#banner"><i class="fas fa-home"></i> Inicio</a></li>
                 <li><a href="#galeria"><i class="fas fa-images"></i> Exposiciones</a></li>
                 <li><a href="#contacto"><i class="fas fa-calendar-alt"></i> Agendar Visita</a></li>
                 <li><a href="#artistas"><i class="fas fa-paint-brush"></i> Artistas</a></li>
